week 2 + week 3 Tuesday

--- a/analytical_geometry/Матрицы.md
+++ b/analytical_geometry/Матрицы.md
@@ -2,7 +2,7 @@
 
 ## Обозначения
 
-Заглавный латинский буквы: A, B, ...
+Заглавные латинские буквы: A, B, ...
 
 ## Определения
 
@@ -27,11 +27,13 @@
 $A + B = C$ <=> $c_{ij} = a_{ij} + b_{ij}$
 
 ### Транспонирование
-
 $B_{n \times m} = {A_{m \times n}}^T$
 
 ### Умножение
 $A \times B = C$ <=> $c_{ij} = \sum\limits_{k=1}^{n}{a_{ik}b_{kj}}$
+
+$\exists AB \nRightarrow \exists BA$  
+Если $AB = BA$, то $A$ и $B$ - **перестановочные**
 
 ## Определитель
 
@@ -75,6 +77,14 @@ $A_{ij} = (-1)^{i+j} \times M_{ij}$, где $M_{ij}$ - **минор** матри
 - Если матрицу n\*n умножить на k, то определитель умножится на k<sup>n</sup>
 - $(A \times B)^{T}= B^{T} \times A^T$
 - $(AB)C = A(BC)$
+    - Пусть $A_{m \times n}, B_{n \times p}, C_{p \times q}$
+    - *Равенство размеров*
+        - $((AB)_{m \times p} \times C_{p \times q})_{m \times q}$
+        - $(A_{m \times n} \times (BC)_{n \times q})_{m \times q}$
+    - *Равенство элементов*
+        - $(AB)_{ij} = \sum\limits_{k=1}^{n} a_{ik}b_{ij}$
+        - $((AB)C)_{il} = \sum\limits_{j=1}^{p} (AB)_{ij}c_{jl} = \sum\limits_{j=1}^{p}(\sum\limits_{k=1}^{n} a_{ik}b_{kj})c_{jl} = \sum\limits_{k=1}^{n} \sum\limits_{j=1}^{p} a_{ik}b_{kj}c_{jl} = \sum\limits_{k=1}^{n} a_{ik} \underset{(BC)_{kl}}{\boxed{\sum\limits_{j=1}^{p} b_{kj}c_{jl}}} = (A(BC))_{il}$
+
 ## Системы линейных уравнений
 
 **Однородная** - все свободные члены равны 0  
