--- a/mathematical_analysis/Множество вещественных чисел.md
+++ b/mathematical_analysis/Множество вещественных чисел.md
@@ -54,14 +54,14 @@ $\begin{align} & \forall x, y \in R \\ & s(x, y) \equiv x + y \\ & p(x, y) \equi
 13. $\forall x, y, z \in \mathbb{R}: \enspace (x \leq y) \land (y \leq z) \Rightarrow x \leq z$
 14. $\forall x, y, z \in \mathbb{R}: \enspace (x \leq y) \Rightarrow (x + z \leq y + z)$
 15. $\forall x, y, z \in \mathbb{R}: \enspace (x \leq y) \land (0 \leq z) \Rightarrow (x \times z \leq y \times z)$
-16. **\***
-### \*
-#### Определение
+16. [Аксиома непрерывности](#аксиома-непрерывности)
+
+### Множество лежит слева
 Пусть $A, B \subset \mathbb{R}$  
 Если $\forall a \in A$ и $\forall b \in B$ $a \leq b$,  
 то **$A$ лежит слева от $B$ ($A \leq B$)**
 
-#### Аксиома непрерывности
+### Аксиома непрерывности
 Пусть $A, B \subset \mathbb{R}$ и $A \leq B$  
 тогда $\exists z \in \mathbb{R}: \enspace \forall a \in A, \space \forall b \in B: \enspace a \leq z \leq b$
 
