--- a/discrete_mathematics/homework/excalidraw/1.1.4.excalidraw.md
+++ b/discrete_mathematics/homework/excalidraw/1.1.4.excalidraw.md
@@ -17,6 +17,5 @@ ta7IbBFA7IBJav1KsfaEadn5iUWARgQbm42ILdIdqH2MweHR8amZuYWocgcZhwNpZKAPJ4vN76ABihHw
 
 3A4QgR3sVwoyAFEJo7A8HQws2mMqNGoQckxnbfBmmMhBMHsxsGMEQANbg6gAcABZtFcrrWeLWdVcAMxtq48eICssV/AATW49YAnJ3tLX4jqki2kjqdfXF32BUY2AZuHVuvQCEIald5QBfLOG/Ts4vEbnMXnoIslgWjEgms3cC1P0gv6pwbj9+UQM+xAALJsMQCAJrgmjBGGaAAgen4kGcfxoDukD9DMsH3somi4AAFDwVwAOzULwxGkYRJGoCS8Q
 
-AJQbJArIIMokZtAspA4fhPCdvyvA8RR/HUQk9Enme2TUggYpQOwQLhpG+ACss5CZExExMIQHDKNu8qQFkUEwdw8EIGSmxEL+cGkAhOkQBwGo1EZJkQMIUBENyhmWQgokAXYABWCDYDk5S2XAoHgZB0EIFhywEGEApDNJjC2pu+DafUDQFgsSkIJF5CZtZWzMFABj5ogclRtZszDJF3DRfgsUVaEToBYQiXJWV+AnuAp50Ms8LhNux4gMeQA=
-```
+AJQbJArIIMokZtAspA4fhPCdvyvA8RR/HUQk9Enme2TUggYpQOwQLhpG+ACss5CZExExMIQHDKNu8qQFkUEwdw8EIGSmxEL+cGkAhOkQBwGo1EZJkQMIUBENyhmWQgokAXYABWCDYDk5S2XAoHgZB0EIFhywEGEApDNJjC2pu+DafUDQFgsSkIJF5CZtZWzMFABj5ogclRtZszDJF3DRfgsUVaEToBYQiXJWV+AnuAp50Ms8LhNux4gMeQA=```
 %%
