--- a/mathematical_analysis/Отображения и счетность множеств.md
+++ b/mathematical_analysis/Отображения и счетность множеств.md
@@ -36,6 +36,23 @@ $\forall y \in B \enspace \enspace x \in A: \enspace f(x) = y$
 
 *Обозначается $g = f|_C$*
 
+### Композиция
+Пусть $f: B \rightarrow C$ и $g: A \rightarrow B$  
+Тогда отображение $h: A \rightarrow C$ вида $h(x) := f(g(x)), x \in A$ называется **композицией** $f$ и $g$
+
+*Обозначается* $h = f \space \circ \space g$
+
+#### Утверждение
+Композиция инъекций является инъекцией, аналогично для сюръекций и биекций
+
+### Обратное отображение
+Пусть $f: A \rightarrow B$ - инъекция, $\Gamma \subset A \times B$ - ее график  
+Тогда отображение $f^{-1}: f(A) \rightarrow A$, графиком которого является $\tilde{\Gamma} = \set{(y, x) \enspace \vert \enspace (x, y) \in \Gamma}$ называется **обратным** $f$
+
+### Полный прообраз
+Пусть $f: A \rightarrow B$ (не обязательно инъекция)  
+$\forall M \subset B \enspace \enspace f^{-1}(M) := \set{x \in A \enspace \vert \enspace f(x) \in M}$ называется **полным прообразом множества $M$ под действием $f$**
+
 ## Равномощные множества
 *Множества $A$ и $B$ называются **равномощными**, если существует биекция $f: A \rightarrow B$*
 
@@ -69,3 +86,95 @@ $I_{n} = \set{1, 2, 3, \textellipsis, n}$
 Множество $A$ называется **конечным**, если $\exists n \in \mathbb{N}$ и биекция $I_{n} \rightarrow A$  
 При этом $n$ называется **числом элементов** множества $A$
 
+## Плотность множества
+
+### Всюду плотное множество
+$A \subset \mathbb{R}$ называется **всюду плотным** в $\mathbb{R}$, если $\forall x \in \mathbb{R} \enspace \forall \varepsilon > 0 \enspace \exists a \in A: \enspace |x - a| < \varepsilon$
+
+#### Замечание
+$A$ всюду плотно в $\mathbb{R} \Leftrightarrow \forall u, v \in \mathbb{R}: \enspace u < v, \enspace \exists a \in A: \enspace u < a < v$
+
+#### $\mathbb{Q}$ всюду плотно в $\mathbb{R}$
+- Пусть $x > 0, \varepsilon > 0, n \in \mathbb{N}$, по принципу Архимеда $\exists n \in \mathbb{N}: \enspace \frac{1}{n} < \varepsilon$
+- Рассмотрим $n \times x$
+- По принципу Архимеда $\exists m \in \mathbb{N}: \enspace m > n \times x$
+- Если $A \subset \mathbb{N}$ непусто, то $\exists \min A$, $A := \set{m \in \mathbb{N} \enspace \vert \enspace m > n \times x}$
+    - Пусть $m = \min A$
+    - Тогда $m - 1 \notin A$
+    - $m - 1 \leq n \times x < m$
+    - $\frac{m-1}{n} \leq x < \frac{m}{n}$
+    - $-\frac{1}{x} \leq x - \frac{m}{n} < 0$
+    - $|x - \frac{m}{n}| \leq \frac{1}{n} < \varepsilon$
+
+## Бесконечные и счетные множества
+$\forall n \in \mathbb{N} \enspace I_{n} := \set{k \in \mathbb{N} \enspace \vert \enspace k \leq n}$  
+
+Если $\exists n \in \mathbb{N}$ и существует биекция $f: I_{n} \rightarrow A$, то $A$ называется **конечным** ($A = \varnothing$ - тоже конечное)  
+Если множество $A$ не является конечным, то оно называется **бесконечным**
+
+#### Утверждение
+*$\mathbb{N}$ - бесконечное множество*
+
+- Пусть $\exists n \in \mathbb{N}: \enspace \exists f: I_{n} \rightarrow \mathbb{N}$ - биекция
+- Тогда $f^{-1}: \mathbb{N} \rightarrow I_{n}$ - тоже биекция
+- Рассмотрим $g: I_{n+1} \rightarrow \mathbb{N}$ вида $g(k) = k$
+    - $I_{n+1} \overset{g}{\rightarrow} \mathbb{N} \overset{f^{-1}}{\rightarrow} I_{n}$
+- $g$ - инъекция
+- Рассмотрим $h = f^{-1} \space \circ \space g$ - композиция инъекций $\Rightarrow$ инъекция
+- По построению $h: I_{n+1} \rightarrow I_{n}$
+- Тогда $n + 1 \leq n$
+    - *Противоречие*
+
+### Счетное множество
+$A$ называется **счетным**, если существует биекция $f: \mathbb{N} \rightarrow A$ ($A$ равномощно $\mathbb{N}$)
+
+$A$ называется **не более, чем счетным**, если существует инъекция $f: A \rightarrow \mathbb{N}$  
+Любое не более чем счетное множество либо конечно, либо счетность
+
+#### Теорема 2
+*$\mathbb{N} \times \mathbb{N}$ счетно*
+
+- Нужно построить биекцию $f: \mathbb{N} \times \mathbb{N} \rightarrow \mathbb{N}$
+    1. табличкой, как с рациональными
+    2. биекцией
+        - любое $x \in \mathbb{N}$ можно представить в виде $x = q \times 2^{p-1} = q' \times 2^{p'-1}$, где $q \in \mathbb{N}$ - нечетное, $p \in \mathbb{N}$
+        - причем такое представление единственное
+        - тогда $f: \mathbb{N} \times \mathbb{N} \rightarrow \mathbb{N}$ вида $f(m, n) = (2m - 1) \times 2^{n-1}$ - биекция
+
+#### Утверждение 1
+Если множества $A$ и $B$ - конечные, то $A \cup B$ - конечное  
+Если множества $A_{1}, A_{2}, \textellipsis, A_{n}$ - конечные, то $A_{1} \cup A_{2} \cup \textellipsis \cup A_{n}$ - конечное
+
+#### Утверждение 2
+Если $\forall n \in \mathbb{N} \enspace A_{n}$ счетно (не более чем счетно), то $\bigcup\limits_{n=1}^{\infty} A_{n}$ счетно (не более чем счетно)
+
+#### Утверждение 3
+Любое подмножество конечного множества - конечное
+
+#### Утверждение 4
+Если $A$ счетно и $f: A \rightarrow B$ - сюръекция, то $B$ не более чем счетно
+
+- $\forall b \in B$ рассмотрим $E_{b} := \set{a \in A \enspace \vert \enspace f(a) = b} = f^{-1}(\set{b}) \equiv f^{-1}(b)$ - полный прообраз $B$
+- Пусть $a \in E_{b} \cap E_{b'}$
+- Тогда $\begin{lgathered} f(a) = b \\ f(a) = b' \end{lgathered}$
+- Тогда $b = b'$
+- Отсюда $E_{b}$ и $E_{b'}$ либо не пересекаются, либо совпадают
+- Построим инъекции $g: B \rightarrow A$ (существует биекция $h: A \rightarrow \mathbb{N}$)
+    - $g(b) := \min h(E_{b})$
+    - *wasted...*
+
+#### Теорема 3
+*$\mathbb{Q}$ счетно*
+
+- Докажем, что $\mathbb{Q}$ не более чем счетно
+    - $\mathbb{Q}_{+} = \set{r \in \mathbb{Q} \enspace \vert \enspace r > 0}$
+    - $\mathbb{Q} = \mathbb{Q}_{+} \cup \set{0} \cup \mathbb{Q}_{-}$
+    - Докажем, что $\mathbb{Q}_{+}$ не более чем счетно
+        - Рассмотрим $f: \mathbb{N} \times \mathbb{N} \rightarrow \mathbb{Q}_{+}, \enspace f(m, n) = \frac{m}{n}$
+        - $f$ - сюръекция
+        - $\Rightarrow \mathbb{Q}_{+}$ не более чем счетно (по [утверждению 4](#утверждение-4))
+    - Тогда $\mathbb{Q}_{+}$ либо счетно, либо конечно
+    - Допустим, что $\mathbb{Q}_{+}$ конечно
+        - $\mathbb{N} \subset \mathbb{Q}$ - бесконечное
+            - *Противоречие*
+            - $\Rightarrow \mathbb{Q}_{+}$ - счетное, $\mathbb{Q}$ - тоже (по [утверждению 2](#утверждение-2))
