--- a/analytical_geometry/Векторы.md
+++ b/analytical_geometry/Векторы.md
@@ -110,4 +110,53 @@ $\overline{a}, \overline{b}, \overline{c}$ - ЛЗ $\Leftrightarrow$ $\begin{vmat
     - $\begin{lgathered} x = a_{11}x' + a_{12}y' + a_{13}z' + \beta_{1} \\ y = a_{21}x' + a_{22}y' + a_{23}z' + \beta_{2} \\ z = a_{31}x' + a_{32}y' + a_{33}z' + \beta_{3} \end{lgathered}$
     - где $O' (\beta_{1}, \beta_{2}, \beta_{3})$ в старой системе координат
 - Матрица перехода от старого базиса к новому:
-    - $\begin{pmatrix} a_{11} \space a_{12} \space a_{13} \\ a_{21} \space a_{22} \space a_{23} \\ a_{31} \space a_{32} \space a_{33} \end{pmatrix}$
+    - $S = \begin{pmatrix} a_{11} \space a_{12} \space a_{13} \\ a_{21} \space a_{22} \space a_{23} \\ a_{31} \space a_{32} \space a_{33} \end{pmatrix}$
+
+### Переход в новую прямоугольную систему координат
+$\begin{lgathered} \overline{e_{1}'} = \cos\varphi \times \overline{e_{1}} + \sin\varphi \times \overline{e_{2}} \\ \overline{e_{2}'} = \cos(\varphi \pm \frac{\pi}{2}) \times \overline{e_{1}} + \sin(\varphi \pm \frac{\pi}{2}) \times \overline{e_{2}} \\ x = \cos\varphi \times x' \mp \sin\varphi \times y' + \beta_{1} \\ y = \sin\varphi \times x' \pm \cos\varphi \times y' + \beta_{2} \\ \det S = \pm 1 \enspace \enspace + \text{, если ориентация сохраняется, } - \text{ иначе} \end{lgathered}$
+
+## Скалярное произведение
+$c = (\overline{a}, \overline{b}) = |\overline{a}| |\overline{b}| \cos(\widehat{\overline{a}, \overline{b}})$
+
+### Свойства
+- $(\overline{a}, \overline{b}) = (\overline{b}, \overline{a})$
+- $(\overline{a}, \overline{a}) = |\overline{a}|^{2} \geq 0$
+- $\cos(\widehat{\overline{a}, \overline{b}}) = \frac{(\overline{a}, \overline{b})}{|\overline{a}| |\overline{b}|}$
+- Пусть $\overline{a}: \forall \overline{x} \enspace (\overline{a}, \overline{x}) = 0 \Rightarrow \overline{a} = \overline{0}$
+- Пусть $\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}}$ - ортогональный базис
+    - $\overline{x} = \frac{(\overline{x}, \overline{e_{1}})}{|\overline{e_{1}}|^{2}} \overline{e_{1}} + \frac{(\overline{x}, \overline{e_{2}})}{|\overline{e_{2}}|^{2}} \overline{e_{2}} + \frac{(\overline{x}, \overline{e_{3}})}{|\overline{e_{3}}|^{2}} \overline{e_{3}}$
+- Пусть $\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}}$ - ортонормированный базис
+    - $\overline{x} = (\overline{x}, \overline{e_{1}}) \overline{e_{1}} + (\overline{x}, \overline{e_{2}}) \overline{e_{2}} + (\overline{x}, \overline{e_{3}}) \overline{e_{3}}$
+- $(\alpha \overline{a} + \beta \overline{b}, \overline{c}) = \alpha(\overline{a}, \overline{c}) + \beta(\overline{b}, \overline{c})$
+    - $\overline{c} = \overline{0}$ - верно
+    - $\overline{c} \ne \overline{0}$
+        - Рассмотрим ортогональный базис с первым вектором $\overline{c}$
+        - $\frac{(\alpha \overline{a} + \beta \overline{b}, \overline{c})}{|\overline{c}|^{2}} = \alpha \frac{(\overline{a}, \overline{c})}{|\overline{c}|^{2}} + \beta \frac{(\overline{b}, \overline{c})}{|\overline{c}|^{2}}$
+
+- $\overline{e_{1}}, \overline{e_{2}}$ - базис
+- $\overline{a}(\alpha_{1}, \alpha_{2}), \overline{b}(\beta_{2}, \beta_{2})$
+- $(\overline{a}, \overline{b}) = (\alpha_{1} \overline{e_{1}} + \alpha_{2} \overline{e_{2}}, \beta_{1} \overline{e_{1}} + \beta_{2} \overline{e_{2}}) = \alpha_{1} \beta_{1} (\overline{e_{1}}, \overline{e_{1}}) + \alpha_{1} \beta_{2} (\overline{e_{1}}, \overline{e_{2}}) + \alpha_{2} \beta_{1} (\overline{e_{2}}, \overline{e_{1}}) + \alpha_{2} \beta_{2} (\overline{e_{2}}, \overline{e_{2}})$
+
+### Биортогональный (взаимный) базис
+- $\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}}$ - базис
+- Пусть $\overline{e_{1}^{*}}, \overline{e_{2}^{*}}, \overline{e_{3}^{*}}: (\overline{e_{i}}, \overline{e_{j}^{*}}) = \left\lbrace \begin{lgathered} 0, i \ne j \\ 1, i = j \end{lgathered} \right.$
+- $\overline{e_{1}^{*}} \perp \overline{e_{2}}, \overline{e_{3}}, (\overline{e_{1}}, \overline{e_{1}^{*}}) = 1$
+    - $\Rightarrow \overline{e_{1}^{*}}, \overline{e_{2}^{*}}, \overline{e_{3}^{*}}$ определяются однозначно
+    - ЛНЗ
+
+- $\overline{a}(\alpha_{1}, \alpha_{2}, \alpha_{3}), \overline{b}(\beta_{1}^{*}, \beta_{2}^{*}, \beta_{3}^{*})$
+    - $(\overline{a}, \overline{b}) = \alpha_{1}\beta_{1} + \alpha_{2}\beta_{2} + \alpha_{3}\beta_{3}$
+
+### Вектор проекции
+$\overline{\text{Пр}_{\overline{b}} \overline{a}} = |\overline{a}| \times \cos\varphi \times \frac{\overline{b}}{|\overline{b}|} = \frac{\overline{a}, \overline{b}}{|\overline{b}|} \times \overline{b}$
+
+## Векторное произведение
+$\overline{c} = [\overline{a}, \overline{b}] = \overline{a} \times \overline{b}$
+- если $\overline{a}$ и $\overline{b}$ коллинеарны, то $\overline{c} = \overline{0}$
+- иначе $\overline{c}:$
+    - $|\overline{c}| = |\overline{a}| \times |\overline{b}| \times \sin(\widehat{\overline{a}, \overline{b}})$
+    - $\overline{c} \perp \overline{a}, \overline{c} \perp \overline{b}$
+    - $\overline{a}, \overline{b}, \overline{c}$ - правая (**кратчайшие повороты от $\overline{a}$ к $\overline{b}$ и от $\overline{b}$ к $\overline{c}$ - против часовой стрелки**)
+
+### Свойства
+- $[\overline{a}, \overline{b}] = -[\overline{b}, \overline{a}]$
