--- a/discrete_mathematics/homework/1.1.md
+++ b/discrete_mathematics/homework/1.1.md
@@ -2,7 +2,31 @@
 
 ![](attachments/1.1.1.excalidraw.svg)
 
-![](1.1.2.excalidraw.svg)
+![](attachments/1.1.2.excalidraw.svg)
 
-![](1.1.3.excalidraw.svg)
+![](attachments/1.1.3.excalidraw.svg)
+
+![](attachments/1.1.4.excalidraw.svg)
+
+![](attachments/1.1.5.excalidraw.svg)
+
+![](attachments/1.1.6.excalidraw.svg)
+
+![](attachments/1.1.7.excalidraw.svg)
+
+![](attachments/1.1.8.excalidraw.svg)
+
+![](attachments/1.1.9.excalidraw.svg)
+
+![](attachments/1.1.10.excalidraw.svg)
+
+![](attachments/1.1.11.excalidraw.svg)
+
+![](attachments/1.1.12.excalidraw.svg)
+
+![](attachments/1.1.13.excalidraw.svg)
+
+![](attachments/1.1.14.excalidraw.svg)
+
+![](attachments/1.1.15.excalidraw.svg)
 
