--- a/discrete_mathematics/homework/1.1.md
+++ b/discrete_mathematics/homework/1.1.md
@@ -30,3 +30,16 @@
 
 ![](attachments/1.1.15.excalidraw.svg)
 
+![](attachments/1.1.16.excalidraw.svg)
+
+![](attachments/1.1.17.excalidraw.svg)
+
+![](attachments/1.1.18.excalidraw.svg)
+
+![](attachments/1.1.19.excalidraw.svg)
+
+![](attachments/1.1.20.excalidraw.svg)
+
+![](attachments/1.1.21.excalidraw.svg)
+
+![](attachments/1.1.22.excalidraw.svg)
