--- a/analytical_geometry/Векторы.md
+++ b/analytical_geometry/Векторы.md
@@ -134,8 +134,8 @@ $c = (\overline{a}, \overline{b}) = |\overline{a}| |\overline{b}| \cos(\widehat{
         - $\frac{(\alpha \overline{a} + \beta \overline{b}, \overline{c})}{|\overline{c}|^{2}} = \alpha \frac{(\overline{a}, \overline{c})}{|\overline{c}|^{2}} + \beta \frac{(\overline{b}, \overline{c})}{|\overline{c}|^{2}}$
 
 - $\overline{e_{1}}, \overline{e_{2}}$ - базис
-- $\overline{a}(\alpha_{1}, \alpha_{2}), \overline{b}(\beta_{2}, \beta_{2})$
-- $(\overline{a}, \overline{b}) = (\alpha_{1} \overline{e_{1}} + \alpha_{2} \overline{e_{2}}, \beta_{1} \overline{e_{1}} + \beta_{2} \overline{e_{2}}) = \alpha_{1} \beta_{1} (\overline{e_{1}}, \overline{e_{1}}) + \alpha_{1} \beta_{2} (\overline{e_{1}}, \overline{e_{2}}) + \alpha_{2} \beta_{1} (\overline{e_{2}}, \overline{e_{1}}) + \alpha_{2} \beta_{2} (\overline{e_{2}}, \overline{e_{2}})$
+    - $\overline{a}(\alpha_{1}, \alpha_{2}), \overline{b}(\beta_{2}, \beta_{2})$
+    - $(\overline{a}, \overline{b}) = (\alpha_{1} \overline{e_{1}} + \alpha_{2} \overline{e_{2}}, \beta_{1} \overline{e_{1}} + \beta_{2} \overline{e_{2}}) = \alpha_{1} \beta_{1} (\overline{e_{1}}, \overline{e_{1}}) + \alpha_{1} \beta_{2} (\overline{e_{1}}, \overline{e_{2}}) + \alpha_{2} \beta_{1} (\overline{e_{2}}, \overline{e_{1}}) + \alpha_{2} \beta_{2} (\overline{e_{2}}, \overline{e_{2}})$
 
 ### Биортогональный (взаимный) базис
 - $\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}}$ - базис
@@ -159,4 +159,23 @@ $\overline{c} = [\overline{a}, \overline{b}] = \overline{a} \times \overline{b}$
     - $\overline{a}, \overline{b}, \overline{c}$ - правая (**кратчайшие повороты от $\overline{a}$ к $\overline{b}$ и от $\overline{b}$ к $\overline{c}$ - против часовой стрелки**)
 
 ### Свойства
-- $[\overline{a}, \overline{b}] = -[\overline{b}, \overline{a}]$
+- $[\overline{a}, \overline{b}] = -[\overline{b}, \overline{a}]$ (меняем местами векторы $\Rightarrow$ меняем ориентацию тройки)
+- $[\overline{a} \pm \overline{b}, \overline{c}] = [\overline{a}, \overline{c}] \pm [\overline{b}, \overline{c}]$
+- $[\alpha \overline{a}, \overline{b}] = \alpha [\overline{a}, \overline{b}]$
+- **В ортонормированном базисе $\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}}$:**
+    - $[\overline{a}(a_{1}, a_{2}, a_{3}), \overline{b}(b_{1}, b_{2}, b_{3})] = \begin{vmatrix} \overline{e_{1}} \space \overline{e_{2}} \space \overline{e_{3}} \\ a_{1} \space a_{2} \space a_{3} \\ b_{1} \space b_{2} \space b_{3} \end{vmatrix}$
+
+## Смешанное произведение
+$\overline{d} = ([\overline{a}, \overline{b}], \overline{c}) = (\overline{a}, [\overline{b}, \overline{c}]) = (\overline{a}, \overline{b}, \overline{c})$  
+$(\overline{a}, \overline{b}, \overline{c}) = \pm V$ - "ориентированный объем"
+
+### Свойства
+- $(\overline{a}, \overline{b}, \overline{c}) = -(\overline{b}, \overline{a}, \overline{c})$
+- $(\overline{a}, \overline{b}, \overline{c}) = (\overline{c}, \overline{a}, \overline{b})$
+- **В ПДСК:**
+    - $(\overline{a}, \overline{b}, \overline{c}) = \begin{vmatrix} a_{1} \space a_{2} \space a_{3} \\ b_{1} \space b_{2} \space b_{3} \\ c_{1} \space c_{2} \space c_{3} \end{vmatrix}$
+- **НЕ В ПДСК:**
+    - $(\overline{a}, \overline{b}, \overline{c}) = \begin{vmatrix} a_{1} \space a_{2} \space a_{3} \\ b_{1} \space b_{2} \space b_{3} \\ c_{1} \space c_{2} \space c_{3} \end{vmatrix} \times (\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}})$
+
+## Двойное векторное произведение
+$[\overline{a}, [\overline{b}, \overline{c}]] = \underset{\text{БАЦ}}{\overline{b} (\overline{a}, \overline{c}))} \underset{\text{минус}}{-} \underset{\text{ЦАП}}{\overline{c} (\overline{a}, \overline{b})}$
