week 4 + change all `\rightarrow` to `\to` in LaTeX

--- a/algorithms/Линейные контейнеры.md
+++ b/algorithms/Линейные контейнеры.md
@@ -6,9 +6,9 @@
 
 `push`
 1. `size < capacity`: добавление за $O(1)$  
-   `(size, capacity)` $\rightarrow$ `(size + 1, capacity)`
+   `(size, capacity)` $\to$ `(size + 1, capacity)`
 2. `size = capacity`: реаллокация за $O($`size`$)$  
-   `(size, capacity)` $\rightarrow$ `(size + 1, capacity')`
+   `(size, capacity)` $\to$ `(size + 1, capacity')`
 ## Амортизированное время
 Пусть $t_{i}$ - реальное время $i$-й операции, тогда $t^{*} = \frac{1}{n} \sum\limits_{i=1}^{n} t_i$ - **амортизированное время**  
 (но это оценка сверху, упрощенная)
