--- a/discrete_mathematics/Отображения.md
+++ b/discrete_mathematics/Отображения.md
@@ -1,6 +1,6 @@
 # Отображения
 
-$f: A \rightarrow B, \enspace |A| = n, \enspace |B| = r$
+$f: A \to B, \enspace |A| = n, \enspace |B| = r$
 
 |                  Отображение                   |          произвольное           |           инъективное           |               сюръективное                | биективное |
 | :--------------------------------------------: | :-----------------------------: | :-----------------------------: | :---------------------------------------: | :--------: |
