--- a/mathematical_analysis/Множество вещественных чисел.md
+++ b/mathematical_analysis/Множество вещественных чисел.md
@@ -30,8 +30,8 @@ $\forall M \subset A: \enspace f(M) := \{ f(x) \space \vert \space x \in M\}$
 
 ## Множество вещественных чисел
 Пусть задано множество $\mathbb{R}$, на котором заданы функции  
-$s: \mathbb{R} \times \mathbb{R} \rightarrow \mathbb{R}$  
-$p: \mathbb{R} \times \mathbb{R} \rightarrow \mathbb{R}$  
+$s: \mathbb{R} \times \mathbb{R} \to \mathbb{R}$  
+$p: \mathbb{R} \times \mathbb{R} \to \mathbb{R}$  
 и множество $L \subset \mathbb{R} \times \mathbb{R}$
 
 $\begin{align} & \forall x, y \in R \\ & s(x, y) \equiv x + y \\ & p(x, y) \equiv x \times y \\ & ((x, y) \in L) \equiv x \leq y \end{align}$
