--- a/mathematical_analysis/Предел последовательности.md
+++ b/mathematical_analysis/Предел последовательности.md
@@ -1,14 +1,14 @@
 # Предел последовательности
 
 ## Числовая последовательность
-Отображение $x: \mathbb{N} \rightarrow \mathbb{R}$ называется **числовой последовательностью**  
+Отображение $x: \mathbb{N} \to \mathbb{R}$ называется **числовой последовательностью**  
 $x_{n} = x(n)$ - $n$-й элемент
 
 ### Расширенное множество вещественных чисел
 $\overline{\mathbb{R}} := \mathbb{R} \cup \set{+\infty} \cup \set{-\infty}$
 
 ## Предел последовательности
-$a \in \overline{\mathbb{R}}$ называется **пределом** $\set{x_{n}}$ ($x \rightarrow a, n \rightarrow \infty$), если  
+$a \in \overline{\mathbb{R}}$ называется **пределом** $\set{x_{n}}$ ($x \to a, n \to \infty$), если  
 $\forall \varepsilon > 0 \enspace \exists N \enspace \forall n > N \enspace |x_{n}| - a < \varepsilon$
 
 #### Единственность предела
@@ -26,7 +26,7 @@ $\set{x_{n}}$ ограничена, если $\exists C > 0: \enspace \forall n 
 ### Утверждение 1
 *Если $\set{x_{n}}$ сходится, то она ограничена*
 
-- $\exists a \in \mathbb{R}: \enspace x_{n} \rightarrow a \enspace \Rightarrow \enspace \forall \varepsilon > 0 \exists N: \enspace \forall n > N \enspace |x_{n} - a| < \varepsilon$
+- $\exists a \in \mathbb{R}: \enspace x_{n} \to a \enspace \Rightarrow \enspace \forall \varepsilon > 0 \exists N: \enspace \forall n > N \enspace |x_{n} - a| < \varepsilon$
 - При $n > N$
     - $|x_{n}| = |x_{n} - a + a| \leq |x_{n} - a| + |a| < \varepsilon + |a|$
 - Тогда возьмем $C := \max(|x_{1}|, |x_{2}|, \textellipsis, |x_{n}|, \varepsilon + |a|)$
@@ -40,20 +40,20 @@ $\set{x_{n}}$ ограничена, если $\exists C > 0: \enspace \forall n 
 $U_{\varepsilon}(A) = \left\lbrace \begin{lgathered} (\frac{1}{\varepsilon}, +\infty), A = +\infty \\ (A - \varepsilon, A + \varepsilon), A \in \mathbb{R} \\ (-\infty, \frac{-1}{\varepsilon}), A = -\infty \end{lgathered} \right.$
 
 ### Определение
-$\lim\limits_{n \rightarrow \infty} x_{n} = A \Leftrightarrow \forall \varepsilon > 0 \enspace \exists N \in \mathbb{N} \enspace \forall n \in \mathbb{N}: n > N \enspace x_{n} \in U_{\varepsilon}(A)$
+$\lim\limits_{n \to \infty} x_{n} = A \Leftrightarrow \forall \varepsilon > 0 \enspace \exists N \in \mathbb{N} \enspace \forall n \in \mathbb{N}: n > N \enspace x_{n} \in U_{\varepsilon}(A)$
 
 #### Утверждение
 *Равносильно определению предела*
 
 Следующие свойства равносильны:
-1. $x_{n} \rightarrow A, n \rightarrow \infty$
+1. $x_{n} \to A, n \to \infty$
 2. $\forall \varepsilon > 0$ вне $U_{\varepsilon}(A)$ лежит лишь конечное число элементов $\set{x_{n}}$, то есть множеств $\set{n \in \mathbb{N} \enspace \vert \enspace x_{n} \notin U_{\varepsilon}(A)}$ конечно
 3. два случая:
     1. при $A \in \mathbb{R} \enspace \forall u, v \in \mathbb{R}: u < A < v \enspace \exists N \enspace \forall n > N \enspace u < x_{n} < v$
     2. при $A = +\infty \enspace \forall n > 0 \enspace \exists N \enspace \forall n > N \enspace u < x_{n}$
 
 #### Предельный переход в неравенстве
-Пусть $\forall n \in \mathbb{N} \enspace x_{n} \leq y_{n}$ и $x_{n} \rightarrow A \in \overline{\mathbb{R}}, y_{n} \rightarrow B \in \overline{\mathbb{R}}$ при $n \rightarrow \infty$  
+Пусть $\forall n \in \mathbb{N} \enspace x_{n} \leq y_{n}$ и $x_{n} \to A \in \overline{\mathbb{R}}, y_{n} \to B \in \overline{\mathbb{R}}$ при $n \to \infty$  
 Тогда $A \leq B$
 
 - Рассмотрим случай $A, B \in \mathbb{R}$ - *от противного*
@@ -75,8 +75,8 @@ $\lim\limits_{n \rightarrow \infty} x_{n} = A \Leftrightarrow \forall \varepsilo
 
 #### Лемма о двух милиционерах
 Пусть $\forall n \in \mathbb{N} \enspace x_{n} \leq y_{n} \leq z_{n}$  
-Если $x_{n} \rightarrow A \in \overline{\mathbb{R}} и z_{n} \rightarrow A$ при $n \rightarrow \infty$,  
-То $y_{n} \rightarrow A, n \rightarrow \infty$
+Если $x_{n} \to A \in \overline{\mathbb{R}} и z_{n} \to A$ при $n \to \infty$,  
+То $y_{n} \to A, n \to \infty$
 
 #### Теорема Вейерштрасса
 Если $\set{x_{n}}$ возрастает и ограничена сверху, то она сходится
