--- a/algorithms/Сортировки.md
+++ b/algorithms/Сортировки.md
@@ -29,7 +29,7 @@ public static int[] merge(int[] a, int[] b) {
     while (aIndex < a.length && bIndex < b.length) {
         // result[aIndex + bIndex] = a[aIndex] < b[bIndex] ? a[aIndex++] : b[bIndex++];
 
-        if (a[aIndex] < b[bIndex]) {
+        if (a[aIndex] <= b[bIndex]) {  // "=" makes mergeSort stable
             result[aIndex + bIndex] = a[aIndex++];
         } else {
             result[aIndex + bIndex] = b[bIndex++];
@@ -70,6 +70,70 @@ for (int i = n / 2; i >= 0; i--) {
     heap.siftDown(i);
 }
 ```
+
+## Quick sort
+
+1. Выбери опорный элемент `pivot` (как-то) - $O(n)$
+2. `Partition(array, pivot) -> (l, r)`
+    - разбивает `array` на три секции:
+        1. `< pivot`
+        2. `== pivot`
+        3. `> pivot`
+    - возвращает `l` и `r`
+3. Рекурсивно отсортируй `array[:l], array[r:]`
+
+```java
+while (l < r) {
+    while (a[l] < pivot || a[r] > pivot) {
+        if (a[l] < pivot) l++;
+        if (a[r] > pivot) r++;
+    }
+
+    swap(a[l], a[r]);
+    l++;
+    r--;
+}
+```
+
+### Теорема о случайности
+
+
+### QuickSelect
+*Пусть дан массив $a_{1}, a_{2}, \textellipsis, a_{n}$ и $k \leq n$, тогда $k$-я порядковая строка - это $k$-й элемент в отсортированном массиве*
+
+#### Алгоритм за линию (в среднем)
+
+1. Выбери `pivot`
+2. `Partition(array, pivot) -> (l, r)`
+3. Если
+    - `k < l => QuickSelect(array[:l], k)`
+    - `k > l => QuickSelect(array[l:], k - l)`
+    - `k == l =>` закончили
+
+### Медиана медиан
+
+1. Разбей массив на блоки по <u>пять</u>
+2. Отсортировать блоки... пузырьком! ($\frac{n}{5} \times O(5^{2}) = O(n)$)
+3. Выбрать медианы блоков
+4. <u>Честно</u> найти медиану через `QuickSelect`
+
+### Возвращаемся к Quick sort
+
+### Утверждение
+Пусть `pivot` всегда делит массив в отношении не хуже $\frac{p}{q}$. тогда $O(QuickSelect) = O(n), O(QuickSort) = O(n \log n)$
+
+$T(n) = n + T\left(\frac{pn}{p+q}\right)+ \underset{QuickSort}{T(\frac{qn}{p+q})}$ 
+- $T(n) = T\left(\frac{n}{5}\right)+ T(\frac{7n}{10})+ n$
+- Докажем, что $T(n) = O(n)$ по индукции
+    - Пусть $\forall k < n \enspace T(k) \leq C \times K$
+    - Тогда $T(n) = T(\frac{n}{5}) + T(\frac{7n}{10}) + n \leq C \times \frac{n}{5} + C \times \frac{7n}{10} + n = n \times (\frac{9}{10} C + 1) \leq C \times n \Leftrightarrow \frac{9}{10} C + 1 \leq C \Rightarrow C \geq 10$
+
+## Стабильная сортировка
+Это такая сортировка, при которой элементы с одинаковыми ключами сохраняют относительный порядок
+
+- `HeapSort` - unstable
+- `QuickSort` - unstable
+- `MergeSort` - **stable**
 
 ## Radix sort
 
