--- a/analytical_geometry/Векторы.md
+++ b/analytical_geometry/Векторы.md
@@ -143,6 +143,9 @@ $c = (\overline{a}, \overline{b}) = |\overline{a}| |\overline{b}| \cos(\widehat{
 - $\overline{e_{1}^{*}} \perp \overline{e_{2}}, \overline{e_{3}}, (\overline{e_{1}}, \overline{e_{1}^{*}}) = 1$
     - $\Rightarrow \overline{e_{1}^{*}}, \overline{e_{2}^{*}}, \overline{e_{3}^{*}}$ определяются однозначно
     - ЛНЗ
+    - $\overline{e_{1}^{*}} = \frac{[\overline{e_{2}}, \overline{e_{3}}]}{(\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}})}$
+    - $\overline{e_{2}^{*}} = \frac{[\overline{e_{3}}, \overline{e_{1}}]}{(\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}})}$
+    - $\overline{e_{3}^{*}} = \frac{[\overline{e_{1}}, \overline{e_{2}}]}{(\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}})}$
 
 - $\overline{a}(\alpha_{1}, \alpha_{2}, \alpha_{3}), \overline{b}(\beta_{1}^{*}, \beta_{2}^{*}, \beta_{3}^{*})$
     - $(\overline{a}, \overline{b}) = \alpha_{1}\beta_{1} + \alpha_{2}\beta_{2} + \alpha_{3}\beta_{3}$
@@ -156,26 +159,44 @@ $\overline{c} = [\overline{a}, \overline{b}] = \overline{a} \times \overline{b}$
 - иначе $\overline{c}:$
     - $|\overline{c}| = |\overline{a}| \times |\overline{b}| \times \sin(\widehat{\overline{a}, \overline{b}})$
     - $\overline{c} \perp \overline{a}, \overline{c} \perp \overline{b}$
-    - $\overline{a}, \overline{b}, \overline{c}$ - правая (**кратчайшие повороты от $\overline{a}$ к $\overline{b}$ и от $\overline{b}$ к $\overline{c}$ - против часовой стрелки**)
+    - $\overline{a}, \overline{b}, \overline{c}$ - правая тройка (**кратчайшие повороты от $\overline{a}$ к $\overline{b}$ и от $\overline{b}$ к $\overline{c}$ - против часовой стрелки**)
 
 ### Свойства
 - $[\overline{a}, \overline{b}] = -[\overline{b}, \overline{a}]$ (меняем местами векторы $\Rightarrow$ меняем ориентацию тройки)
 - $[\overline{a} \pm \overline{b}, \overline{c}] = [\overline{a}, \overline{c}] \pm [\overline{b}, \overline{c}]$
 - $[\alpha \overline{a}, \overline{b}] = \alpha [\overline{a}, \overline{b}]$
-- **В ортонормированном базисе $\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}}$:**
+- **В <u>правом</u> ортонормированном базисе $\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}}$:**
     - $[\overline{a}(a_{1}, a_{2}, a_{3}), \overline{b}(b_{1}, b_{2}, b_{3})] = \begin{vmatrix} \overline{e_{1}} \space \overline{e_{2}} \space \overline{e_{3}} \\ a_{1} \space a_{2} \space a_{3} \\ b_{1} \space b_{2} \space b_{3} \end{vmatrix}$
+- **В произвольном базисе $\overline{f_{1}}, \overline{f_{2}}, \overline{f_{3}}$:**
+    - $[\overline{a}(a_{1}, a_{2}, a_{3}), \overline{b}(b_{1}, b_{2}, b_{3})] = \begin{vmatrix} [\overline{f_{2}}, \overline{f_{3}}] & [\overline{f_{3}}, \overline{f_{1}}] & [\overline{f_{1}}, \overline{f_{2}}] \\ a_{1} & a_{2} & a_{3} \\ b_{1} & b_{2} & b_{3} \end{vmatrix}$
+- $\overline{a}, \overline{b}, \overline{c}$ - ЛНЗ $\Leftrightarrow$ $[\overline{a}, \overline{b}], [\overline{b}, \overline{c}], [\overline{c}, \overline{c}]$ - ЛНЗ
+    - если $\overline{a}, \overline{b}, \overline{c}$ компланарны, то и $[\overline{a}, \overline{b}], [\overline{b}, \overline{c}], [\overline{c}, \overline{c}]$ компланарны
+    - $\overline{a}, \overline{b}, \overline{c}$ - не компланарны
+        - значит, $(\overline{a}, \overline{b}, \overline{c}) \ne 0$
+        - $\overline{0} = \alpha [\overline{a}, \overline{b}] + \beta [\overline{b}, \overline{c}] + \gamma [\overline{c}, \overline{a}]$ - скалярно умножим на $\overline{a}$
+        - $\overline{0} = \alpha \times 0 + \beta (\overline{a}, \overline{b}, \overline{c}) + \gamma \times 0$
+        - $\Rightarrow \beta = 0$
+        - $\Rightarrow$ ЛНЗ
+- $S_{\text{параллелограмма}} = \begin{vmatrix} |\overline{a}|^{2} & (\overline{a}, \overline{b}) \\ (\overline{a}, \overline{b}) & |\overline{b}|^{2} \end{vmatrix}$
 
 ## Смешанное произведение
 $\overline{d} = ([\overline{a}, \overline{b}], \overline{c}) = (\overline{a}, [\overline{b}, \overline{c}]) = (\overline{a}, \overline{b}, \overline{c})$  
 $(\overline{a}, \overline{b}, \overline{c}) = \pm V$ - "ориентированный объем"
 
 ### Свойства
-- $(\overline{a}, \overline{b}, \overline{c}) = -(\overline{b}, \overline{a}, \overline{c})$
-- $(\overline{a}, \overline{b}, \overline{c}) = (\overline{c}, \overline{a}, \overline{b})$
-- **В ПДСК:**
+- $(\overline{a}, \overline{b}, \overline{c}) = -(\overline{b}, \overline{a}, \overline{c})$ - поменять местами два вектора
+- $(\overline{a}, \overline{b}, \overline{c}) = (\overline{c}, \overline{a}, \overline{b})$ - циклически переставить
+- $(\alpha_{1} \overline{a_{1}} + \alpha_{2} \overline{a_{2}}, \overline{b}, \overline{c}) = \alpha_{1} (\overline{a_{1}}, \overline{b}, \overline{c}) + \alpha_{2} (\overline{a_{2}}, \overline{b}, \overline{c})$
+- **В ПДСК (правом ОНБ):**
     - $(\overline{a}, \overline{b}, \overline{c}) = \begin{vmatrix} a_{1} \space a_{2} \space a_{3} \\ b_{1} \space b_{2} \space b_{3} \\ c_{1} \space c_{2} \space c_{3} \end{vmatrix}$
 - **НЕ В ПДСК:**
     - $(\overline{a}, \overline{b}, \overline{c}) = \begin{vmatrix} a_{1} \space a_{2} \space a_{3} \\ b_{1} \space b_{2} \space b_{3} \\ c_{1} \space c_{2} \space c_{3} \end{vmatrix} \times (\overline{e_{1}}, \overline{e_{2}}, \overline{e_{3}})$
 
 ## Двойное векторное произведение
-$[\overline{a}, [\overline{b}, \overline{c}]] = \underset{\text{БАЦ}}{\overline{b} (\overline{a}, \overline{c}))} \underset{\text{минус}}{-} \underset{\text{ЦАП}}{\overline{c} (\overline{a}, \overline{b})}$
+$[\overline{a}, [\overline{b}, \overline{c}]] = \underset{\text{БАЦ}}{\overline{b} (\overline{a}, \overline{c})} \underset{\text{минус}}{-} \underset{\text{ЦАП}}{\overline{c} (\overline{a}, \overline{b})}$
+
+- *В правом ОНБ $\overline{e_{1}} \parallel \overline{b}, \overline{e_{2}} \text{ компланарен } \overline{b} \text{ и } \overline{c}, \overline{e_{3}} \text{ определяется однозначно}$:*
+    - $\overline{b} = \begin{pmatrix} \beta \\ 0 \\ 0 \end{pmatrix}$
+    - $\overline{c} = \begin{pmatrix} \gamma_{1} \\ \gamma_{2} \\ 0 \end{pmatrix}$
+    - $\overline{a} = \begin{pmatrix} \alpha_{1} \\ \alpha_{2} \\ \alpha_{3} \end{pmatrix}$
+    - $[\overline{a}, [\overline{b}, \overline{c}]] = \begin{vmatrix} \overline{e_{1}} & \overline{e_{2}} & \overline{e_{3}} \\ \alpha_{1} & \alpha_{2} & \alpha_{3} \\ 0 & 0 & \beta \gamma_{2} \end{vmatrix} = \begin{pmatrix} \alpha_{2} \beta \gamma_{2} \\ -\alpha_{1} \beta \gamma_{2} \\ 0 \end{pmatrix}$
